package edu.uees.disenosoftware.builder;

public enum Prioridad { 
    BAJA, 
    MEDIA, 
    ALTA
}